@@ -22,7 +22,9 @@ Version CVS HEAD (?)
       LSCP commands ("SET CHANNEL MUTE" and "SET CHANNEL SOLO") and two new
       fields ("MUTE" and "SOLO") for command "GET CHANNEL INFO" were
       introduced for this, the behavior is the same like on a mixer console
-      (patch by Grigor Iliev, a bit adjusted)
+      (patch by Grigor Iliev, a bit adjusted). Also added configure option
+      --enable-process-muted-channels which can be used to enable the
+      processing of muted channels.
 
 Version 0.3.3 (15 July 2005)
 
